<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/locationListViewBar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_new_main"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/locationListViewHeadBar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/topbar_new_main"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/locationListBtnSlide"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="0dp"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/locationListCatName"
            style="@style/inputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.83"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/location_add_listView_headTitle"
            android:textColor="@color/headerTitleColor"
            android:textSize="12sp" />
        
        <Button
            android:id="@+id/nearbyLocationList"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/smallbutton_new"
            android:text="@string/location_list_button_lists" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationListViewContent"
        android:layout_width="fill_parent"
        android:layout_height="310dp" >
        <com.google.android.maps.MapView
            android:id="@+id/locationListScreenMap"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" 
            android:apiKey="00t2obY8ctbPoP4OFoP1-Of7xZ_d1Nci6L7169A" />
        <!-- home:00t2obY8ctbP8A4BN22lly8Mf-84SmU1tYelpbQ -->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/locactionListViewForButton"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottombar_new" >

        
        <Button
            android:id="@+id/ButAddLocation"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_new_main"
            android:gravity="center"
            android:text="@string/location_add"
            android:textColor="@color/headTitleColor"
            android:textSize="18sp" />
  
    </RelativeLayout>

</LinearLayout>