<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_new_main"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/registerViewHeadBar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/topbar_new_main"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/catName"
            style="@style/inputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.83"
            android:gravity="center"
            android:text="@string/location_add_header"
            android:textColor="@color/headerTitleColor"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/registerScreenId"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_new_main" >

            <RelativeLayout
                android:id="@+id/header_image_layout"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_below="@+id/RelLayHead"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/photoframe_new" >

                <ImageView
                    android:id="@+id/ButImage"
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/photomask"
                    android:src="@drawable/default_user_header_image" />
            </RelativeLayout>

            <View
                android:id="@+id/lineView1"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/header_image_layout"
                android:background="@drawable/divider_new" />

            <LinearLayout
                android:id="@+id/mapLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/lineView1"
                android:orientation="vertical" >

                <com.baidu.mapapi.MapView
                    android:id="@+id/locationBigMap"
                    android:layout_width="fill_parent"
                    android:layout_height="240dp"
                    android:clickable="true" />

                <View
                    android:id="@+id/lineView"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/header_image_layout"
                    android:background="@drawable/divider_new" />

                <LinearLayout
                    android:id="@+id/gpsLocationLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edtLocationLat"
                        android:layout_width="150dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="4dip"
                        android:hint="@string/location_add_lat_hit"
                        android:inputType="numberDecimal"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edtLocationLon"
                        android:layout_width="150dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="4dp"
                        android:hint="@string/location_add_lon_hit"
                        android:inputType="numberDecimal"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/registerButtonLayout"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/mapLinearLayout"
                android:layout_marginTop="5dp"
                android:background="@drawable/bottombar_new" >

                <Button
                    android:id="@+id/Butregister"
                    android:layout_width="290dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/button_new_main"
                    android:gravity="center"
                    android:text="@string/location_add_finish"
                    android:textColor="@color/headTitleColor"
                    android:textSize="18sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>