<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelLayHead"
        android:layout_width="fill_parent"
        android:layout_height="59dip"
        android:background="@drawable/background2" >

        <Button
            android:id="@+id/ButHomeTop"
            android:layout_width="99dip"
            android:layout_height="59dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/home"
            android:gravity="right|center"
            android:paddingRight="40dip"
            android:text="@string/home_btn"
            android:textColor="@color/violet"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="fill_parent"
            android:layout_height="59dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/search_title"
            android:textColor="@color/titleColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rightEdge"
            android:layout_width="5dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/right_edge" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/sortCat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelLayHead"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:drawSelectorOnTop="false"
        android:paddingBottom="10dip" />

    <Spinner
        android:id="@+id/sortbysubCat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sortCat"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:drawSelectorOnTop="false"
        android:paddingBottom="10dip" />

    <Button
        android:id="@+id/ButGo"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/sortbysubCat"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/button_on"
        android:gravity="center"
        android:text="@string/search_go"
        android:textColor="@color/violet"
        android:textSize="16sp" />

    <!--
 <RelativeLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content" 
		  android:layout_marginBottom="10dip"
		  android:layout_marginLeft="20dip"
		  android:layout_marginRight="20dip"
		  android:layout_alignParentBottom="true"
		>
		
		 <Button   
		    	android:id="@+id/Buthome"
		      	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/home_off"
		  />
	   
	    <Button   
		    	android:id="@+id/ButSerarch"
		      	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/search_on"
		    	android:layout_toRightOf="@+id/Buthome"
		  />
		  <Button   
		    	android:id="@+id/ButFev"
		      	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/favourites_off"
		    	android:layout_toRightOf="@+id/ButSerarch"
		  />
		  <Button   
		    	android:id="@+id/ButPeople"
		      	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/friends_off"
		    	android:layout_toRightOf="@+id/ButFev"
		  />
		  <Button   
		    	android:id="@+id/ButSetting"
		      	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:background="@drawable/settings_off"
		    	android:layout_toRightOf="@+id/ButPeople"
		  />
		
  </RelativeLayout>
    -->

    <include layout="@layout/footer" />

</RelativeLayout>